==> RTOpen/RTRetroGame/software/firmware/boards/STM32H747I-DISCO/drivers/drv_eth.c <==
#include "rtthread.h"
#include "drv_eth.h"
#include "hw_config.h"
#include "lwip/ip.h"
#include "netif/ethernetif.h"
#include "netif/etharp.h"
#include "lwip/icmp.h"
#include "lwipopts.h"
#define DBG_SECTION_NAME  "drv.eth"
#define DBG_COLOR
#define DBG_LEVEL DBG_LOG
#include <rtdbg.h>
#define ETH_RXBUFNB         7
#define ETH_TXBUFNB         3

void ETH_IRQHandler(void)
{
    rt_uint32_t status;

    /* enter interrupt */
    rt_interrupt_enter();

	   //Read DMA status register
    status = ETH->DMACSR;
   // ier = ETH->DMACIER;
	 if(status & ETH_DMACSR_NIS)
	 {
	 volatile	rt_uint32_t nis_clear = ETH_DMACSR_NIS;
   //A packet has been transmitted?
   if(status & ETH_DMACSR_TI)
   {
      //Clear TI interrupt flag
      nis_clear |= ETH_DMACSR_TI;

      LOG_D("ETH_DMACSR_TI\r\n");
     if(!(txDmaDesc[txIndex].tdes3 & ETH_TDES3_OWN))
      {
			 if (tx_is_waiting == RT_TRUE)
			 {
					 tx_is_waiting = RT_FALSE;
					 rt_sem_release(&tx_wait);
			 }
			}
   }

   //A packet has been received?
   if(status & ETH_DMACSR_RI)
   {
      //Clear RI interrupt flag
      nis_clear |= ETH_DMACSR_RI;

      LOG_D("ETH_DMACSR_RI\r\n");
       /* a frame has been received */
      eth_device_ready(&(stm32_eth_device.parent));
   }

   //Clear NIS interrupt flag
   ETH->DMACSR = nis_clear;
   }

    if (status & ETH_DMACSR_AIS)
    {
        rt_uint32_t ais_clear = ETH_DMACSR_AIS;
        LOG_D("ETH_DMA_IT_AIS\r\n");

        /* [1]:Transmit Process Stopped. */
        if (status & ETH_DMACSR_TPS)
        {
            LOG_D("AIS ETH_DMACSR_TPS\r\n");
            ais_clear |= ETH_DMACSR_TPS;
        }

        /* [2]: Transmit Buffer Unavailable. */
        if (status & ETH_DMACSR_TBU)
        {
            LOG_D("AIS ETH_DMACSR_TBU\r\n");
            ais_clear |= ETH_DMACSR_TBU;
        }

        /* [3]: Receive Buffer Unavailable. */
        if (status & ETH_DMACSR_RBU)
        {
            LOG_D("AIS ETH_DMACSR_RBU\r\n");
            ais_clear |= ETH_DMACSR_RBU;
        }

        /* [4]: Receive Process Stopped. */
        if (status & ETH_DMACSR_RPS)
        {
            LOG_D("AIS ETH_DMACSR_RPS\r\n");
            ais_clear |= ETH_DMACSR_RPS;
        }

        /* [5]: Receive Watchdog Timeout. */
        if (status & ETH_DMACSR_RWT)
        {
            LOG_D("AIS ETH_DMACSR_RWT\r\n");
            ais_clear |= ETH_DMACSR_RWT;
        }

        /* [6]: Early Transmit Interrupt. */
        if (status & ETH_DMACSR_ETI)
        {
            LOG_D("AIS ETH_DMACSR_ETI\r\n");
            ais_clear |= ETH_DMACSR_ETI;
        }
				
				/* [7]: Early Receive Interrupt. */
        if (status & ETH_DMACSR_ERI)
        {
            LOG_D("AIS ETH_DMACSR_ERI\r\n");
            ais_clear |= ETH_DMACSR_ERI;
        }
				
        /* [8]: Fatal Bus Error. */
        if (status & ETH_DMACSR_FBE)
        {
            LOG_D("AIS ETH_DMACSR_FBE\r\n");
            ais_clear |= ETH_DMACSR_FBE;
        }

         ETH->DMACSR = ais_clear;
    }

    /* leave interrupt */
    rt_interrupt_leave();
}

static rt_err_t rt_stm32_eth_init(rt_device_t dev)
{
    stm32_eth_t *stm32_eth = (stm32_eth_t *)dev;
   //Debug message
   LOG_D("Initializing STM32H7 Ethernet MAC...\r\n");

   //Enable Ethernet MAC clock
	  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_ETH1MAC);
	  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_ETH1TX);
	  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_ETH1RX);

   //Reset Ethernet MAC peripheral
   LL_AHB1_GRP1_ForceReset(LL_AHB1_GRP1_PERIPH_ETH1MAC);
   LL_AHB1_GRP1_ReleaseReset(LL_AHB1_GRP1_PERIPH_ETH1MAC);

   //Perform a software reset
   ETH->DMAMR |= ETH_DMAMR_SWR;
   //Wait for the reset to complete
   while(ETH->DMAMR & ETH_DMAMR_SWR)
   {
   }

   //Adjust MDC clock range depending on HCLK frequency
   ETH->MACMDIOAR = ETH_MACMDIOAR_CR_DIV124;

   //Use default MAC configuration
   ETH->MACCR = ETH_MACCR_FES  | ETH_MACCR_DR | ETH_MACCR_IPC |ETH_MACCR_DM;

   //Set the MAC address of the station
   ETH->MACA0LR = ((uint32_t)stm32_eth->dev_addr[3] << 24) | ((uint32_t)stm32_eth->dev_addr[2] << 16) | ((uint32_t)stm32_eth->dev_addr[1] << 8) | stm32_eth->dev_addr[0];
   ETH->MACA0HR = ((uint32_t)stm32_eth->dev_addr[5] << 8) | stm32_eth->dev_addr[4];

   //The MAC supports 3 additional addresses for unicast perfect filtering
   ETH->MACA1LR = 0;
   ETH->MACA1HR = 0;
   ETH->MACA2LR = 0;
   ETH->MACA2HR = 0;
   ETH->MACA3LR = 0;
   ETH->MACA3HR = 0;

   //Initialize hash table
   ETH->MACHT0R = stm32_eth->ETH_HashTableLow;
   ETH->MACHT1R = stm32_eth->ETH_HashTableHigh;
	 
   //Configure the receive filter
   ETH->MACPFR = ETH_MACPFR_HPF | ETH_MACPFR_HMC;

   //Disable flow control
   ETH->MACTFCR = 0;
   ETH->MACRFCR = 0;

   //Configure DMA operating mode
   ETH->DMAMR = ETH_DMAMR_INTM_0 | ETH_DMAMR_PR_2_1;
   //Configure system bus mode
   ETH->DMASBMR |= ETH_DMASBMR_AAL | ETH_DMASBMR_FB;
   //The DMA takes the descriptor table as contiguous
   ETH->DMACCR = ETH_DMACCR_DSL_0BIT;

   //Configure TX features
   ETH->DMACTCR = ETH_DMACRCR_RPBL_32PBL;

   //Configure RX features
   ETH->DMACRCR = ETH_DMACRCR_RPBL_32PBL;
   ETH->DMACRCR |= (ETH_RX_BUFFER_SIZE << 1) & ETH_DMACRCR_RBSZ;

   //Enable store and forward mode
   ETH->MTLTQOMR |= ETH_MTLTQOMR_TSF;
   ETH->MTLRQOMR |= ETH_MTLRQOMR_RSF;

   //Initialize DMA descriptor lists
   Eth_InitDmaDesc();

   //Prevent interrupts from being generated when the transmit statistic
   //counters reach half their maximum value
   ETH->MMCTIMR = ETH_MMCTIMR_TXLPITRCIM | ETH_MMCTIMR_TXLPIUSCIM |
      ETH_MMCTIMR_TXGPKTIM | ETH_MMCTIMR_TXMCOLGPIM | ETH_MMCTIMR_TXSCOLGPIM;

   //Prevent interrupts from being generated when the receive statistic
   //counters reach half their maximum value
   ETH->MMCRIMR = ETH_MMCRIMR_RXLPITRCIM | ETH_MMCRIMR_RXLPIUSCIM |
      ETH_MMCRIMR_RXUCGPIM | ETH_MMCRIMR_RXALGNERPIM | ETH_MMCRIMR_RXCRCERPIM;

   //Disable MAC interrupts
   ETH->MACIER = 0;
   //Enable the desired DMA interrupts
   ETH->DMACIER = ETH_DMACIER_NIE | ETH_DMACIER_RIE | ETH_DMACIER_TIE;

   //Enable MAC transmission and reception
   ETH->MACCR |= ETH_MACCR_TE | ETH_MACCR_RE;

   //Enable DMA transmission and reception
   ETH->DMACTCR |= ETH_DMACTCR_ST;
   ETH->DMACRCR |= ETH_DMACRCR_SR;

    /* Clear Tx and Rx process stopped flags */
    ETH->DMACSR |= (ETH_DMACSR_TPS | ETH_DMACSR_RPS);
#if LWIP_IPV4 && LWIP_IGMP
    netif_set_igmp_mac_filter(stm32_eth->parent.netif, igmp_mac_filter);
#endif /* LWIP_IPV4 && LWIP_IGMP */

#if LWIP_IPV6 && LWIP_IPV6_MLD
    netif_set_mld_mac_filter(stm32_eth->parent.netif, mld_mac_filter);
#endif /* LWIP_IPV6 && LWIP_IPV6_MLD */

    return RT_EOK;
}

rt_err_t rt_stm32_eth_tx(rt_device_t dev, struct pbuf *p)
{
    struct pbuf *q;
    rt_uint32_t offset;

    /* Check if the descriptor is owned by the ETHERNET DMA (when set) or CPU (when reset) */
    while ((txDmaDesc[txIndex].tdes3 & ETH_TDES3_OWN) != (uint32_t)RESET)
    {
        rt_err_t result;
        rt_uint32_t level;

        level = rt_hw_interrupt_disable();
        tx_is_waiting = RT_TRUE;
        rt_hw_interrupt_enable(level);

        /* it's own bit set, wait it */
        result = rt_sem_take(&tx_wait, RT_WAITING_FOREVER);
        if (result == RT_EOK) break;
        if (result == -RT_ERROR) return -RT_ERROR;
    }

    offset = 0;
    for (q = p; q != NULL; q = q->next)
    {
        uint8_t *to;

        /* Copy the frame to be sent into memory pointed by the current ETHERNET DMA Tx descriptor */
        to = (uint8_t *)((txBuffer[txIndex]) + offset);
        rt_memcpy(to, q->payload, q->len);
        offset += q->len;
    }
#ifdef ETH_TX_DUMP
    {
        rt_uint32_t i;
        rt_uint8_t *ptr = (rt_uint8_t *)(txDmaDesc[txIndex].tdes0);

        LOG_D("tx_dump, len:%d\r\n", p->tot_len);
        for (i = 0; i < p->tot_len; i++)
        {
            LOG_RAW("%02x ", *ptr);
            ptr++;

            if (((i + 1) % 8) == 0)
            {
                LOG_RAW("  ");
            }
            if (((i + 1) % 16) == 0)
            {
                LOG_RAW("\r\n");
            }
        }
        LOG_RAW("\r\ndump done!\r\n");
    }
#endif

   //Set the start address of the buffer
   txDmaDesc[txIndex].tdes0 = (uint32_t) txBuffer[txIndex];
   //Write the number of bytes to send
   txDmaDesc[txIndex].tdes2 = ETH_TDES2_IOC | (p->tot_len & ETH_TDES2_B1L);
   //Give the ownership of the descriptor to the DMA
   txDmaDesc[txIndex].tdes3 = ETH_TDES3_OWN | ETH_TDES3_FD | ETH_TDES3_LD;

#ifdef CHECKSUM_BY_HARDWARE
    DMATxDescToSet->Status |= ETH_DMATxDesc_ChecksumTCPUDPICMPFull;
    /* clean ICMP checksum STM32F need */
    {
        struct eth_hdr *ethhdr = (struct eth_hdr *)(txDmaDesc[txIndex].tdes0);
        /* is IP ? */
        if (ethhdr->type == htons(ETHTYPE_IP))
        {
            struct ip_hdr *iphdr = (struct ip_hdr *)(txDmaDesc[txIndex].tdes0 + SIZEOF_ETH_HDR);
            /* is ICMP ? */
            if (IPH_PROTO(iphdr) == IP_PROTO_ICMP)
            {
                struct icmp_echo_hdr *iecho = (struct icmp_echo_hdr *)(txDmaDesc[txIndex].tdes0 + SIZEOF_ETH_HDR + sizeof(struct ip_hdr));
                iecho->chksum = 0;
            }
        }
    }
#endif
   //Data synchronization barrier
   __DSB();
   //Clear TBU flag to resume processing
   ETH->DMACSR = ETH_DMACSR_TBU;
   //Instruct the DMA to poll the transmit descriptor list
   ETH->DMACTDTPR = 0;

   //Increment index and wrap around if necessary
   if(++txIndex >= ETH_TX_BUFFER_COUNT)
      txIndex = 0;

    /* Return SUCCESS */
    return RT_EOK;
}

struct pbuf *rt_stm32_eth_rx(rt_device_t dev)
{
    struct pbuf *p;
    rt_uint32_t framelength = 0;
    rt_uint32_t offset = 0;
    /* init p pointer */
    p = RT_NULL;

    /* Check if the descriptor is owned by the ETHERNET DMA (when set) or CPU (when reset) */
    if (((rxDmaDesc[rxIndex].rdes3 & ETH_RDES3_OWN) != (uint32_t)RESET))
        return p;
    if (((rxDmaDesc[rxIndex].rdes3 & ETH_RDES3_ES) == (uint32_t)RESET) &&
            ((rxDmaDesc[rxIndex].rdes3 & ETH_RDES3_LD) != (uint32_t)RESET) &&
            ((rxDmaDesc[rxIndex].rdes3 & ETH_RDES3_FD) != (uint32_t)RESET))
    {
        //Retrieve the length of the frame
        framelength = rxDmaDesc[rxIndex].rdes3 & ETH_RDES3_PL;
        //Limit the number of data to read
			  framelength = (framelength>ETH_RX_BUFFER_SIZE) ? ETH_RX_BUFFER_SIZE:framelength;
			
        /* allocate buffer */
        p = pbuf_alloc(PBUF_LINK, framelength, PBUF_RAM);
        if (p != RT_NULL)
        {
            struct pbuf* q;

            for (q = p; q != RT_NULL; q= q->next)
            {
                /* Copy the received frame into buffer from memory pointed by the current ETHERNET DMA Rx descriptor */
                rt_memcpy(q->payload, (uint8_t *)((rxDmaDesc[rxIndex].rdes0) + offset), q->len);
                offset += q->len;
            }
#ifdef ETH_RX_DUMP
            {
                rt_uint32_t i;
                rt_uint8_t *ptr = (rt_uint8_t*)(rxDmaDesc[rxIndex].rdes0);

                LOG_D("rx_dump, len:%d\r\n", p->tot_len);
                for(i=0; i<p->tot_len; i++)
                {
                    LOG_RAW("%02x ", *ptr);
                    ptr++;

                    if(((i+1)%8) == 0)
                    {
                        LOG_RAW("  ");
                    }
                    if(((i+1)%16) == 0)
                    {
                        LOG_RAW("\r\n");
                    }
                }
                LOG_RAW("\r\ndump done!\r\n");
            }
#endif
        }
    }

      //Set the start address of the buffer
      rxDmaDesc[rxIndex].rdes0 = (uint32_t) rxBuffer[rxIndex];
      //Give the ownership of the descriptor back to the DMA
      rxDmaDesc[rxIndex].rdes3 = ETH_RDES3_OWN | ETH_RDES3_IOC | ETH_RDES3_BUF1V;

      //Increment index and wrap around if necessary
      if(++rxIndex >= ETH_RX_BUFFER_COUNT)
         rxIndex = 0;

	//Clear RBU flag to resume processing
    ETH->DMACSR = ETH_DMACSR_RBU;
    //Instruct the DMA to poll the receive descriptor list
    ETH->DMACRDTPR = 0;
		
    return p;
}

static void NVIC_Configuration(void)
{
   //Configure Ethernet interrupt priority
   NVIC_SetPriority(ETH_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(),
                              ETH_IRQ_GROUP_PRIORITY, ETH_IRQ_SUB_PRIORITY));
	 NVIC_EnableIRQ(ETH_IRQn);
}

static void GPIO_Configuration(void)
{
   LL_GPIO_InitTypeDef GPIO_InitStructure;
   //Enable SYSCFG clock
   LL_APB4_GRP1_EnableClock(LL_APB4_GRP1_PERIPH_SYSCFG);

   //Enable GPIO clocks
   LL_AHB4_GRP1_EnableClock(ETH_GPIO_RCC);

	 //Select RMII interface mode
   LL_SYSCFG_SetPHYInterface(LL_SYSCFG_ETH_RMII);
	
   //Configure RMII pins
   GPIO_InitStructure.Mode = LL_GPIO_MODE_ALTERNATE;
   GPIO_InitStructure.Pull = LL_GPIO_PULL_NO;
   GPIO_InitStructure.Speed = LL_GPIO_SPEED_FREQ_VERY_HIGH;
   GPIO_InitStructure.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  

   //Configure ETH_RMII_REF_CLK, ETH_MDIO , ETH_MDC, RMII_TX_EN and ETH_RMII_CRS_DV
   GPIO_InitStructure.Pin = ETH_REF_CLK_PIN;
   GPIO_InitStructure.Alternate = ETH_REF_CLK_AF;
   LL_GPIO_Init(ETH_REF_CLK_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_MDIO_PIN;
   GPIO_InitStructure.Alternate = ETH_MDIO_AF;
   LL_GPIO_Init(ETH_MDIO_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_MDC_PIN;
   GPIO_InitStructure.Alternate = ETH_MDC_AF;
   LL_GPIO_Init(ETH_MDC_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_TX_EN_PIN;
   GPIO_InitStructure.Alternate = ETH_TX_EN_AF;
   LL_GPIO_Init(ETH_TX_EN_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_CRS_DV_PIN;
   GPIO_InitStructure.Alternate = ETH_CRS_DV_AF;
   LL_GPIO_Init(ETH_CRS_DV_PORT, &GPIO_InitStructure);

   //Configure  ETH_RMII_TXD0  and ETH_RMII_TXD1
   GPIO_InitStructure.Pin = ETH_TXD0_PIN;
   GPIO_InitStructure.Alternate = ETH_TXD0_AF;
   LL_GPIO_Init(ETH_TXD0_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_TXD1_PIN;
   GPIO_InitStructure.Alternate = ETH_TXD1_AF;
   LL_GPIO_Init(ETH_TXD1_PORT, &GPIO_InitStructure);

   //Configure ETH_RMII_RXD0  and ETH_RMII_RXD1 
   GPIO_InitStructure.Pin = ETH_RXD0_PIN;
   GPIO_InitStructure.Alternate = ETH_RXD0_AF;
   LL_GPIO_Init(ETH_RXD0_PORT, &GPIO_InitStructure);
   GPIO_InitStructure.Pin = ETH_RXD1_PIN;
   GPIO_InitStructure.Alternate = ETH_RXD1_AF;
   LL_GPIO_Init(ETH_RXD1_PORT, &GPIO_InitStructure);
	 
}
